references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Feature_invalid_noType.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:e30719a39ebed910d78a7314aa22876ac8ed0f93425302fa6023ca8dfd1fb6c7
size 415
